--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 ﻿{
-    "connectionString": "mongodb+srv://gentle_coder:vikitor@api.dlpfm.mongodb.net/api?retryWrites=true&w=majority",
+    "connectionString": "mongodb+srv://afrihowbackend:AFRIHOW2020@cluster0.0vhpf.mongodb.net/<dbname>?retryWrites=true&w=majority",
     "secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET, IT CAN BE ANY STRING"
 }
