subject and stories api

--- a/package.json
+++ b/package.json
@@ -1,28 +1,26 @@
 {
-    "name": "afrihow-api",
-    "version": "1.0.0",
-    "description": "Afrihow API",
-    "license": "ISC",
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/engrvictor/afrihow-api.git"
-    },
-    "scripts": {
-        "start": "node ./server.js",
-        "start:dev": "nodemon ./server.js"
-    },
-    "dependencies": {
-        "bcryptjs": "^2.4.3",
-        "body-parser": "^1.19.0",
-        "cors": "^2.8.5",
-        "express": "^4.17.1",
-        "express-jwt": "^6.0.0",
-        "jsonwebtoken": "^8.5.1",
-        "mongodb": "^3.5.9",
-        "mongoose": "^5.9.21",
-        "rootpath": "^0.1.2"
-    },
-    "devDependencies": {
-        "nodemon": "^2.0.4"
-    }
+  "name": "afrihow-api",
+  "version": "1.0.0",
+  "description": "Afrihow API",
+  "main": "server.js",
+  "scripts": {
+    "test": "start",
+    "start": "nodemon server.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/engrvictor/afrihow-api.git"
+  },
+  "author": "Gentle Coder",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/engrvictor/afrihow-api.git/issues"
+  },
+  "homepage": "https://github.com/engrvictor/afrihow-api.git#readme",
+  "dependencies": {
+    "bcrypt": "^5.0.0",
+    "express": "^4.17.1",
+    "joi": "^14.3.1",
+    "mongoose": "^5.9.23"
+  }
 }
