--- a/package.json
+++ b/package.json
@@ -12,14 +12,23 @@
         "start:dev": "nodemon ./server.js"
     },
     "dependencies": {
+        "@sendgrid/mail": "^7.2.2",
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.19.0",
+        "cloudinary": "^1.22.0",
         "cors": "^2.8.5",
+        "crypto-js": "^4.0.0",
+        "datauri": "^3.0.0",
+        "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "express-jwt": "^6.0.0",
+        "express-validator": "^6.6.0",
         "jsonwebtoken": "^8.5.1",
         "mongodb": "^3.5.9",
         "mongoose": "^5.9.21",
+        "multer": "^1.4.2",
+        "passport": "^0.4.1",
+        "passport-jwt": "^4.0.0",
         "rootpath": "^0.1.2"
     },
     "devDependencies": {
